--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "cookie-universal-nuxt": "^2.1.0",
     "nuxt": "^2.0.0",
     "vuex-persistedstate": "^2.7.0"
   },
